--- a/README
+++ b/README
@@ -15,3 +15,5 @@ Supported:
 DropBox，Github，Wikipedia，Flickr，Twitter，Facebook，Google Services.Block some ads.
 You'd better connect me if you can't visit some websites normally like before.
 
+---------------
+项目代码重写将在14底。届时百度应用商店和360应用商店都会推送更新～
