--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,11 @@
 
     <string name="app_name">CoolHosts</string>
 	<string name="start_button">一键更新</string>
-	<string name="about">关于</string>
-	<string name="help">说明</string>
+	<string name="about">关于CoolHosts</string>
+	<string name="help">使用帮助</string>
+	<string name="unrooted">CoolHosts尚未获得设备的Root权限</string>
+	 <string name="dialog_about"><b>CoolHosts</b>\n\n版本 2.0\n\n作者 Find\n\n在新浪微博上关注@FindBlog\n\n个人博客： www.findspace.name</string>
+	<string name="local_version">本地版本：</string>
+	<string name="remote_version">服务器版本：</string>
+	<string name="tempstring"><b>正在获取服务器上的hosts文件…</b>\n如果一直显示该条信息，请检查您的网络连接是否出现了问题</string>
 </resources>
