--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
 	<string name="about">关于CoolHosts</string>
 	<string name="help">使用帮助</string>
 	<string name="unrooted">CoolHosts尚未获得设备的Root权限</string>
-	 <string name="dialog_about"><b>CoolHosts</b>\n\n版本 2.0\n\n作者 Find\n\n在新浪微博上关注@FindBlog\n\n个人博客： www.findspace.name\n\n<b>点击google提供的广告便是您对我最大的支持！</b></string>
+	 <string name="dialog_about"><b>CoolHosts</b>\n\n版本 2.0\n\n作者 Find\n\n在新浪微博上关注@FindBlog\n\n个人博客： www.findspace.name\n\n<b>这是个人无偿项目,请点击博客中的广告来支撑这个app的发展。</b></string>
 	<string name="local_version">本地版本：</string>
 	<string name="remote_version">服务器版本：</string>
 	<string name="tempstring"><b>正在获取服务器上的hosts文件…</b>\n如果一直显示该条信息，请检查您的网络连接是否出现了问题</string>
@@ -16,4 +16,7 @@
 	<string name="copysuccess">Hosts更新成功，快去看看google是不是已经可以使用了～</string>
 	<string name="copyfailed">Hosts更新失败@_@</string>
 	<string name="neterror">请检查您的网络状态</string>
+	<string name="version">应用本地版本: \n最新版本:</string>
+	<string name="MY_AD_UNIT_ID">ca-app-pub-8527554614606787/7985243150</string>
+	<string name="NeedUpdate">CoolHosts需要更新\n\n请打开使用帮助在文章下面的连接更新，同时戳文章中的广告来支撑CoolHosts的维护，谢谢～</string>
 </resources>
