--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,17 +3,19 @@
 
     <string name="app_name">CoolHosts</string>
 	<string name="start_button">一键更新</string>
-	<string name="about">关于CoolHosts</string>
-	<string name="help">使用帮助</string>
+	<string name="about">关于</string>
+	<string name="help">帮助</string>
+	<string name="updatechversion">检查CoolHosts版本</string>
 	<string name="unrooted">CoolHosts尚未获得设备的Root权限</string>
-	 <string name="dialog_about"><b>CoolHosts</b>\n\n版本 2.0.4\n\n作者 Find\n\n在新浪微博上关注@FindSpace博客\n\n个人博客： www.findspace.name\n\n<b>这是个人无偿项目,请点击博客中的广告来支撑这个app的发展。</b></string>
+	 <string name="dialog_about"><b>CoolHosts</b>\n\n作者 Find\n\n在新浪微博上关注@FindSpace博客\n\n个人博客： www.findspace.name\n\n<b>请点击博客中的广告来支撑这个app的发展。</b></string>
 	<string name="local_version">本地版本：</string>
 	<string name="remote_version">服务器版本：</string>
 	<string name="tempstring"><b>正在获取服务器上的hosts文件…</b>\n如果一直显示该条信息，请检查您的网络连接是否出现了问题</string>
 	<string name="deleteoldhosts">删除旧的hosts文件…</string>
 	<string name="deletefailed">删除旧hosts文件失败</string>
 	<string name="copyingnewhosts">正在复制新的hosts文件…</string>
-	<string name="copysuccess">Hosts更新成功，快去看看google是不是已经可以使用了～</string>
+	<string name="copysuccess">Hosts更新成功，快去看看google是不是已经可以使用了～戳上面一下贡献你的力量～</string>
 	<string name="copyfailed">Hosts更新失败@_@</string>
-	<string name="neterror">请检查您的网络状态</string>
+	<string name="neterror">请检查您的网络状态，或者发邮件给我反馈</string>
+	<string name="updatechnote">请到博客去下载更新！</string>
 </resources>
